# options-arb

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  live-smoke.yml  storage-integration.yml
config/: .env.example  default.toml
crates/arb-scanner/: Cargo.toml
crates/arb-scanner/src/: lib.rs
crates/arb-scanner/tests/: cross_clob.rs  cross_venue.rs  cross_venue_parity.rs  vol_lag.rs  vol_surface_arb.rs  zero_dte.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  live_smoke.rs  types.rs
crates/common/tests/: live_smoke.rs  types_normalization.rs
crates/connector-aevo/: Cargo.toml
crates/connector-aevo/src/: lib.rs
crates/connector-aevo/tests/: aevo_collector.rs
crates/connector-deribit/: Cargo.toml
crates/connector-deribit/src/: lib.rs
crates/connector-deribit/tests/: deribit_connector.rs
crates/connector-derive/: Cargo.toml
crates/connector-derive/src/: lib.rs
crates/connector-derive/tests/: derive_collector_workflow.rs  derive_connector.rs
crates/connector-premia/: Cargo.toml
crates/connector-premia/src/: lib.rs
crates/connector-premia/tests/: premia_collector.rs
crates/connector-stryke/: Cargo.toml
crates/connector-stryke/src/: lib.rs
crates/connector-stryke/tests/: stryke_collector.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/executor/tests/: executor.rs  paper_trading.rs
crates/pricing/: Cargo.toml
crates/pricing/src/: lib.rs
crates/pricing/tests/: pricing_engine.rs
crates/risk-manager/: Cargo.toml
crates/risk-manager/src/: lib.rs
crates/risk-manager/tests/: risk_manager.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_init_timescaledb.sql
crates/storage/src/: lib.rs
crates/storage/tests/: storage_integration.rs  storage_layer.rs
docs/: defi-options-protocols.md  deployment-runbook.md  deribit-api.md  live-smoke.md  metrics.md  plan.md  required-checks.md  rust-options-math.md  sdk-survey.md
scripts/: ci_local.sh  run_live_smoke.sh
