[workspace]
resolver = "2"
members = [
    "bin/options-arb",
    "crates/common",
    "crates/pricing",
    "crates/connector-deribit",
    "crates/connector-derive",
    "crates/connector-aevo",
    "crates/connector-premia",
    "crates/connector-stryke",
    "crates/arb-scanner",
    "crates/risk-manager",
    "crates/executor",
    "crates/storage",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tracing = "0.1"
config = "0.15"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
