[package]
name = "connector-aevo"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"
reqwest = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
