[package]
name = "connector-deribit"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
tokio-stream = "0.1"
reqwest = { workspace = true }
