[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1"
risk-manager = { path = "../risk-manager" }
tokio = { workspace = true, features = ["time"] }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
